--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -65,7 +65,7 @@
         <li class="nav-item{% if section == "dcs" and subSection == "player" %} active{% endif %}">
             <a class="nav-link" href="{{ path("admin_dcs_player_list") }}">
                 <i class="fas fa-users fa-chart-area"></i>
-                <span>Joueurs DCS</span>
+                <span>Joueurs</span>
             </a>
         </li>
 
