--- a/templates/admin/user/view.html.twig
+++ b/templates/admin/user/view.html.twig
@@ -34,6 +34,10 @@
                                 <td>
                                     {% if user.simDcs %}
                                         <i class="fa fa-check-circle text-success"></i>
+                                        {% if user.player is not null %}
+                                            {# @todo add link to DCS player #}
+                                            <a href="#" class="btn btn-link disabled">détails</a>
+                                        {% endif %}
                                     {% else %}
                                         <i class="fa fa-times-circle text-light"></i>
                                     {% endif %}
@@ -45,7 +49,7 @@
                                 </td>
                                 <td>
                                     {% if user.simBms %}
-                                        <i class="fa fa-check-circle text-sucess"></i>
+                                        <i class="fa fa-check-circle text-success"></i>
                                     {% else %}
                                         <i class="fa fa-times-circle text-light"></i>
                                     {% endif %}
@@ -67,20 +71,22 @@
                             </tr>
                             <tr>
                                 <td>
-                                    Créé le:
+                                    Créé:
                                 </td>
                                 <td>
-                                    <div data-toggle="tooltip" data-placement="top" title="{{ user.createdAt | date('d/m/Y H:i:s') }}">
+                                    <div data-toggle="tooltip" data-placement="top"
+                                         title="{{ user.createdAt | date('d/m/Y H:i:s') }}">
                                         {{ user.createdAt | ago }}
                                     </div>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    Modifié le:
+                                    Modifié:
                                 </td>
                                 <td>
-                                    <div data-toggle="tooltip" data-placement="top" title="{{ user.updatedAt | date('d/m/Y H:i:s') }}">
+                                    <div data-toggle="tooltip" data-placement="top"
+                                         title="{{ user.updatedAt | date('d/m/Y H:i:s') }}">
                                         {{ user.updatedAt | ago }}
                                     </div>
                                 </td>
