add office page

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -43,7 +43,7 @@
                         <div class="dropdown-menu" aria-labelledby="association">
                             <a class="dropdown-item" href="/association/presentation-association">Présentation</a>
                             <!--                        <div class="dropdown-divider"></div>-->
-                            <a class="dropdown-item" href="/association/le-bureau">Le bureau</a>
+                            <a class="dropdown-item" href="{{ path('office') }}">Le bureau</a>
                             <a class="dropdown-item" href="/association/status">Les statuts</a>
                             <a class="dropdown-item" href="/association/reglement-interieur">Règlement intérieur</a>
                             <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre">Rejoindre
