--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -70,17 +70,26 @@
                             </a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a href="{{ path("roster") }}" class="nav-link"><span class="fa fa-plane"></span>
+                            Pilotes</a>
+                    </li>
                     {% if app.user %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
                                id="webstv"><span class="fa fa-user"></span> {{ app.user.nickname }}<span
                                         class="caret"></span></a>
                             <div class="dropdown-menu" aria-labelledby="webstv">
+                                <a class="dropdown-item" href="{{ path("profile") }}">
+                                    Mon profil
+                                </a>
                                 {% if is_granted("ROLE_ADMIN") %}
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{{ path("admin_index") }}">
                                         Administration
                                     </a>
                                 {% endif %}
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path("app_logout") }}">
                                     Déconnexion
                                 </a>
