--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -54,7 +54,7 @@
                             <td id="module-{{ module.id }}">
                                 {{ module.name }}
                                 <div class="float-right">
-                                    <div class="btn-group">
+                                    <div class="btn-group mr-3">
                                         <button class="btn {% if myModule is not null and myModule.active %}btn-success{% else %}btn-secondary{% endif %}"
                                                 data-module-type="{{ module.type }}"
                                                 data-module="{{ module.id }}"
