add profil view for all users

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block pageContent %}
     <div class="container container-main pt-3 pb-3 mb-3">
-        <h1>Mon profile</h1>
+        <h1>Mon profil</h1>
     </div>
     <div class="container container-main pt-3 pb-3 mb-3">
         <h1>Mes modules</h1>
