--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -41,11 +41,17 @@
                                     class="fa fa-hotel"></span> Association
                             <span class="caret"></span></a>
                         <div class="dropdown-menu" aria-labelledby="association">
-                            <a class="dropdown-item" href="/association/presentation-association">Présentation</a>
+                            {% if route_exists('page_presentation') %}
+                                <a class="dropdown-item" href="{{ path('page_presentation') }}">Présentation</a>
+                            {% endif %}
                             <!--                        <div class="dropdown-divider"></div>-->
                             <a class="dropdown-item" href="{{ path('office') }}">Le bureau</a>
-                            <a class="dropdown-item" href="/association/status">Les statuts</a>
-                            <a class="dropdown-item" href="/association/reglement-interieur">Règlement intérieur</a>
+                            {% if route_exists('page_status') %}
+                                <a class="dropdown-item" href="{{ path('page_status') }}">Les statuts</a>
+                            {% endif %}
+                            {% if route_exists('page_reglement-interieur') %}
+                                <a class="dropdown-item" href="{{ path('page_reglement-interieur') }}">Règlement intérieur</a>
+                            {% endif %}
                             <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre">Rejoindre
                                 l'association</a>
                         </div>
