--- a/templates/admin/default/index.html.twig
+++ b/templates/admin/default/index.html.twig
@@ -73,5 +73,21 @@
                 </div>
             </div>
         </div>
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                <a href="{{ path('admin_file_list') }}">Fichiers</a></div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ total.files }}</div>
+                        </div>
+                        <div class="col-auto">
+                            <a href="{{ path('admin_file_list') }}"><i class="fas fa-file-alt fa-2x text-gray-300"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
