add gregwar image bundle to preview and resize images

--- a/templates/admin/file/view.html.twig
+++ b/templates/admin/file/view.html.twig
@@ -96,7 +96,7 @@
                     <div class="card mb-3">
                         <h3 class="card-header">Image</h3>
                         <div class="card-body">
-                            <img src="{{ image(file_path(file)).resize(800) }} }}"/>
+                            <img class="img-fluid" src="{{ image(file_path(file)).resize(800) }}"/>
                         </div>
                     </div>
                 </div>
