fix youtube channel link close #72

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -33,7 +33,7 @@
                         <a href="/" class="nav-link"><span class="fa fa-newspaper"></span> Les nouvelles</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://community.veaf.org/" class="nav-link"><span class="fa fa-envelope"></span>
+                        <a href="https://community.veaf.org/" class="nav-link" target="_blank"><span class="fa fa-envelope"></span>
                             Forum</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -52,7 +52,7 @@
                             {% if route_exists('page_reglement-interieur') %}
                                 <a class="dropdown-item" href="{{ path('page_reglement-interieur') }}">Règlement intérieur</a>
                             {% endif %}
-                            <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre">Rejoindre
+                            <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre" target="_blank">Rejoindre
                                 l'association</a>
                         </div>
                     </li>
@@ -61,8 +61,8 @@
                                     class="fa fa-tv"></span> Webs TV
                             <span class="caret"></span></a>
                         <div class="dropdown-menu" aria-labelledby="webstv">
-                            <a class="dropdown-item" href="http://www.youtube.com/user/AssociationVEAF/">
-                                <span class="fa fa-youtube"></span> Chaîne Youtube VEAF
+                            <a class="dropdown-item" href="https://www.youtube.com/channel/UCEF1A_q8Cnw9JLW_Rlig3OQ/featured" target="_blank">
+                                <i class="fab fa-youtube"></i> Chaîne Youtube VEAF
                             </a>
                         </div>
                     </li>
