--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -17,72 +17,61 @@
             </div>
         </div>
     </div>
-    <div class="container container-main pt-3 pb-3 mb-3">
-        <div class="row mb-5">
-            <div class="col-md-3">
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">F-16C</div>
-                    <img src="{{ cdn_veaf }}/img/f-16c.jpg" class="img-fluid">
-                </div>
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">M-2000C</div>
-                    <img src="{{ cdn_veaf }}/img/m-2000c.jpg" class="img-fluid">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="lg-12">
-                    <img src="{{ cdn_veaf }}/img/veaf-passion.png" class="img-fluid">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">KA-50</div>
-                    <img src="{{ cdn_veaf }}/img/ka-50.jpg" class="img-fluid">
-                </div>
 
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">UH-1H</div>
-                    <img src="{{ cdn_veaf }}/img/uh-1h.jpg" class="img-fluid">
-                </div>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-lg-12">
-                <div class="bs-component">
-                    <div class="jumbotron">
-                        <p class="text-center">
-                            La <b>Virtual European Air Force</b> est une association de personnes passionnées par
-                            l'aviation de combat. Cette passion se concrétise au travers de la pratique de la <b>simulation
-                                de vol</b>.
-                        </p>
-                        <p class="text-center">
-                            Tout comme dans la "réalité", le "vol", ne se cantonne pas à une prise de manche au
-                            milieu du ciel !
-                        </p>
-                        <p class="text-center">
-                            Formation, entraînement, qualification, préparation des opérations, analyse des
-                            missions, expérimentation, développement de nouveaux outils, améliorations du
-                            simulateur... jalonnent un grand nombre de nos activités.
-                        </p>
-                        <p class="text-center">
-                            Des activités qui animent la vie de notre groupe qui se veut partager des objectifs,
-                            valeurs et ambitions communes : la volonté de <b>progresser</b> ensemble, le
-                            <b>partage</b> et l'entraide, le respect, l'<b>excellence</b> dans la simulation et le
-                            combat avec une pointe acérée de combativité et volonté de vaincre.
-                        </p>
-                        <p class="text-center">
-                            La VEAF aujourd'hui, c'est près d'une quarantaine de personnes des quatres coins de la
-                            France et la Belgique, civils et militaires, toujours prêt à en découdre mais aussi à
-                            faire découvrir leur passion.
-                        </p>
-                        <p class="text-center">
-                            C'est une <b>aventure des temps modernes</b>... qui ne fait que commencer !
-                        </p>
+    {# aircrafts #}
+    <div class="container container-main mb-3">
+        <div class="row justify-content-center">
+            {% for aircraft in aircrafts %}
+                <div class="col-lg-3 col-md-6 pt-3 pb-3">
+                    <div class="module-wrap">
+                        <a href="{{ path('roster_aircraft', {'group': 'members', 'aircraft': aircraft.code}) }}">
+                            <img class="img-fluid" src="{{ image(image_path(aircraft.image)).zoomCrop(1000,560) }}"/>
+                            <div class="module-description-layer">
+                                <p class="module-description">{{ aircraft.code | upper }}</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
+
+    {# helicopters #}
+    <div class="container container-main mb-3">
+        <div class="row justify-content-center">
+            {% for helicopter in helicopters %}
+                <div class="col-lg-3 col-md-6 pt-3 pb-3">
+                    <div class="module-wrap">
+                        <a href="{{ path('roster_helicopter', {'group': 'members', 'helicopter': helicopter.code}) }}">
+                            <img class="img-fluid" src="{{ image(image_path(helicopter.image)).zoomCrop(1000,560) }}"/>
+                            <div class="module-description-layer">
+                                <p class="module-description">{{ helicopter.code | upper }}</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    {# maps #}
+    <div class="container container-main mb-3">
+        <div class="row">
+            {% for map in maps %}
+                <div class="col-sm-12 pt-3 pb-3">
+                    <div class="module-wrap">
+                        <a href="{{ path('roster_map', {'group': 'members', 'map': map.code}) }}">
+                            <img class="img-fluid" src="{{ image(image_header_path(map.image)).zoomCrop(1110,222) }}"/>
+                            <div class="module-description-layer">
+                                <p class="module-description">{{ map.name | upper }}</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
     <div class="container container-main pt-3 pb-3 mb-3">
         <div class="row mb-4">
             <div class="col-lg-12">
